--- a/Extension/VideoGifCapture - Copy.html
+++ b/Extension/VideoGifCapture - Copy.html
@@ -1,53 +1,40 @@
-﻿<!DOCTYPE html>
+﻿<link href="bootstrap.min.css" rel="stylesheet" />
+<meta https-equiv="Content-Security-Policy" content="default-src *;script-src 'self';object-src 'self'" />
+<style>
+    .blink {
+        animation: blink-animation 1s steps(5, start) infinite;
+        -webkit-animation: blink-animation 1s steps(5, start) infinite;
+    }
 
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <!--<meta charset="utf-8">
-
-    <meta id="theme-color" name="theme-color" content="#ffffff">-->
-    <meta charset="utf-8" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <style>
-
-        .blink {
-            animation: blink-animation 1s steps(5, start) infinite;
-            -webkit-animation: blink-animation 1s steps(5, start) infinite;
+    @keyframes blink-animation {
+        to {
+            visibility: hidden;
         }
+    }
 
-        @keyframes blink-animation {
-            to {
-                visibility: hidden;
-            }
+    @-webkit-keyframes blink-animation {
+        to {
+            visibility: hidden;
         }
+    }
 
-        @-webkit-keyframes blink-animation {
-            to {
-                visibility: hidden;
-            }
-        }
+    html {
+        width: 1000px;
+        height: 750px;
+    }
 
-        html {
-            width: 1000px; /* max: 1000px */
-            height: 750px; /* max: 750px */
-        }
-
-        .center {
-            margin: auto;
-            width: 50%;
-            border: 0px;
-            padding: 10px;
-        }
-    </style>
-    <title></title>
-    <script src="jQuery371.js"></script>
-    <script src="bootstrap.min.js"></script>
-    <script src="GifCapture.js"></script>
-</head>
-
-<body style="height:600px;width:800px">
-
-
-
+    .center {
+        margin: 10;
+        width: 50%;
+        border: 0;
+        padding: 10px;
+    }
+</style>
+<title></title>
+<script src="jQuery371.js"></script>
+<script src="bootstrap.min.js"></script>
+<script src="GifCapture.js"></script>
+<body style="height: 600px; width: 800px;">
     <div class="container">
         <div class="jumbotron">
             <h1>GIFfy screen recorder</h1>
@@ -55,17 +42,9 @@
             <p>All the images are deleted two seconds after they've been generated.</p>
         </div>
     </div>
-
-    <div class="center">
-        <button id="startRecording" class="btn btn-primary">start recording</button>
-        <button id="stopRecording" class="btn btn-danger">stop recording</button>
+    <div class="center"><button class="btn btn-primary" id="startRecording">start recording</button> <button class="btn btn-danger" id="stopRecording">stop recording</button></div>
+    <div class="center" id="blinkingText">
+        <span class="blink" style="font-size: 15px;"><b>Please wait while the GIF is being prepared and downloaded.</b></span>
     </div>
-
-    <div id="blinkingText" class="center">
-        <span style="font-size:15px" class="blink"><b>Please wait while the GIF is being prepared and downloaded.</b></span>
-    </div>
-    <video height="600" width="1200" id="videoElem" controls autoplay playsinline muted></video>
-    <br />
-
+    <video loop autoplay controls height="600" id="videoElem" muted playsinline width="1200"></video><br />
 </body>
-</html>
