--- a/Extension/VideoGifCapture.html
+++ b/Extension/VideoGifCapture.html
@@ -2,37 +2,49 @@
 <meta https-equiv="Content-Security-Policy" content="default-src *;script-src 'self';object-src 'self'" />
 <style>
     .blink {
-        animation: blink-animation 1s steps(5,start) infinite;
-        -webkit-animation: blink-animation 1s steps(5,start) infinite
+        animation: blink-animation 1s steps(5, start) infinite;
+        -webkit-animation: blink-animation 1s steps(5, start) infinite;
     }
 
     @keyframes blink-animation {
         to {
-            visibility: hidden
+            visibility: hidden;
         }
     }
 
     @-webkit-keyframes blink-animation {
         to {
-            visibility: hidden
+            visibility: hidden;
         }
     }
 
     html {
         width: 1000px;
-        height: 750px
+        height: 750px;
     }
 
     .center {
         margin: auto;
         width: 50%;
         border: 0;
-        padding: 10px
+        padding: 10px;
     }
 </style>
 <title></title>
-<script src=jQuery371.js></script>
-<script src=bootstrap.min.js></script>
-<script src=GifCapture.js></script>
-<body style=height:600px;width:800px>
-    <div class=container><div class=jumbotron><h1>GIFfy screen recorder</h1><p>Record a video of your screen using your browser's native display capture and convert it to a GIF file<p>All the images are deleted two seconds after they've been generated.</div></div><div class=center><button class="btn btn-primary" id=startRecording>start recording</button> <button class="btn btn-danger" id=stopRecording>stop recording</button></div><div class=center id=blinkingText><span class=blink style=font-size:15px><b>Please wait while the GIF is being prepared and downloaded.</b></span></div><video loop autoplay controls height=600 id=videoElem muted playsinline width=1200></video><br>
+<script src="jQuery371.js"></script>
+<script src="bootstrap.min.js"></script>
+<script src="GifCapture.js"></script>
+<body style="height: 600px; width: 800px;">
+    <div class="container">
+        <div class="jumbotron">
+            <h1>GIFfy screen recorder</h1>
+            <p>Record a video of your screen using your browser's native display capture and convert it to a GIF file</p>
+            <p>All the images are deleted two seconds after they've been generated.</p>
+        </div>
+    </div>
+    <div class="center"><button class="btn btn-primary" id="startRecording">start recording</button> <button class="btn btn-danger" id="stopRecording">stop recording</button></div>
+    <div class="center" id="blinkingText">
+        <span class="blink" style="font-size: 15px;"><b>Please wait while the GIF is being prepared and downloaded.</b></span>
+    </div>
+    <video loop autoplay controls height="600" id="videoElem" muted playsinline width="1200"></video><br />
+</body>
